Filter classes to avoid content overflow

--- a/frontend/app/styles/main.scss
+++ b/frontend/app/styles/main.scss
@@ -30,6 +30,10 @@ md-toast {
   z-index: 1250;
 }
 
+md-input-container.filter {
+  width: 100%;
+}
+
 /* Space out content a bit */
 body {
   padding-bottom: 20px;
