--- a/frontend/app/styles/stylesheet.scss
+++ b/frontend/app/styles/stylesheet.scss
@@ -206,6 +206,7 @@ button {
     margin-top: 50px;
     margin-left: 15%;
     padding: 5% 8%;
+    width: 70%;
 }
 
 
